Fix AppleTalk name registration, as discussed on the port-macppc list <http://mail-index.netbsd.org/port-macppc/2010/07/09/msg001119.html> and in PR kern/44412, by looping back ddp broadcasts.

Patch submitted by David Riley against netbsd-5, adaptation for
-current and minor KNF touchup by me.

Needs to be pulled up to netbsd-5.